--- a/docs/index.rmd
+++ b/docs/index.rmd
@@ -55,7 +55,7 @@ datadrivencv::build_network_logo(CV$entries_data)
 
 ```{r}
 if(params$pdf_mode){
-  cat("View this CV online with links at _https://github.com/gabrielforest/cv/docs/index.html_")
+  cat("View this CV online with links at https://gabrielforest.github.io/cv/")
 } else {
   cat("[<i class='fas fa-download'></i> Download a PDF of this CV](https://github.com/gabrielforest/cv/docs/cv.pdf)")
 }
