--- a/docs/index.rmd
+++ b/docs/index.rmd
@@ -60,11 +60,11 @@ datadrivencv::build_network_logo(CV$entries_data)
 
 - <i class="fa fa-phone"></i> +5515998260810
 
-- <i class="fa fa-github"></i> [GitHub: `@`Gabrielforest](https://github.com/Gabrielforest)
+- [<i class="fa fa-github"></i> GitHub: `@`Gabrielforest](https://github.com/Gabrielforest)
 
-- <i class="fa fa-home"></i>[Portfolio](https://gabrielforest.github.io/portfolio/)
+- [<i class="fa fa-home"></i> Blog](https://gabrielforest.github.io/portfolio/)
 
-- <i class="fa fa-linkedin"></i> [Linkedin](https://www.linkedin.com/in/gabriel-de-freitas-pereira-925260205)
+- [<i class="fa fa-linkedin"></i> Linkedin](https://www.linkedin.com/in/gabriel-de-freitas-pereira-925260205)
 
 
 
@@ -110,7 +110,7 @@ CV %<>% print_text_block("intro")
 ```
 
 
-Data Science Writing {data-icon=chart-line}
+Education {data-icon=graduation-cap data-concise=true}
 --------------------------------------------------------------------------------
 
 ::: aside
@@ -118,14 +118,6 @@ Data Science Writing {data-icon=chart-line}
 CV %<>% print_text_block('data_science_writing_aside')
 ```
 :::
-
-```{r}
-CV %<>% print_section('data_science_writings')
-```
-
-
-Education {data-icon=graduation-cap data-concise=true}
---------------------------------------------------------------------------------
 
 ```{r}
 CV %<>% print_section('education')
